--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">About Me</string>
+    <string name="name">Talha Ahmed</string>
+    <string name="yellow_star">Yellow Star Resource</string>
+    <string name="bio">Hi, my name is Talha. \\n\\nI love fish. \\n\\nThe kind that is alive and swims around in an
+        aquarium or river, or a lake, and definitely the ocean. \\nFun fact is that I have several aquariums and also a
+        river. \\n\\nI like eating fish, too. Raw fish. Grilled fish. Smoked fish. Poached fish - not so much. \\nAnd
+        sometimes I even go fishing. \\nAnd even less sometimes, I actually catch something. \\n\\nOnce, when I was
+        camping in Canada, and very hungry, I even caught a large salmon with my hands. \\n\\nI\\\'ll be happy to teach
+        you how to make your own aquarium. \\nYou should ask someone else about fishing, though.\\n\\n
+    </string>
+    <string name="what_is_your_nickname">Whats Your Nick Name</string>
+    <string name="done">Done</string>
 </resources>
